# backend/internal/entity/payment.go
@@ -9,3 +9,12 @@ type Payment struct {
 	Merchant  *string    `json:"merchant,omitempty"`
 	Status    *string    `json:"status,omitempty"`
 }
+
+type PaymentSummary struct {
+	Completed   *int     `json:"completed,omitempty"`
+	Failed      *int     `json:"failed,omitempty"`
+	Processing  *int     `json:"processing,omitempty"`
+	Total       *int     `json:"total,omitempty"`
+	TotalAmount *float32 `json:"total_amount,omitempty"`
+}
+}
